Improve MomentService
- Remove use of deprecated Collectors.toList() method
- Directly fetch userId from the repository in getUserMoments()
- Verify a moments existence for more representative error responses in deleteMoment()